UX: Fix another case of messages overflowing the viewport

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -499,6 +499,8 @@ $float-height: 530px;
     }
 
     .tc-text {
+      min-width: 0;
+
       img {
         max-width: 100%;
         height: unset;
